--- a/app/src/main/res/layout-land/activity_credits_screen.xml
+++ b/app/src/main/res/layout-land/activity_credits_screen.xml
@@ -8,16 +8,16 @@
     tools:context=".CreditsScreen">
 
     <ImageButton
-        android:id="@+id/creditsMusicButton2"
+        android:id="@+id/creditsMusicButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/backgroundColor"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.974"
+        app:layout_constraintHorizontal_bias="0.954"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.942"
+        app:layout_constraintVertical_bias="0.971"
         app:srcCompat="@android:drawable/ic_lock_silent_mode_off" />
 
     <TextView
