--- a/app/src/main/res/layout-land/activity_credits_screen.xml
+++ b/app/src/main/res/layout-land/activity_credits_screen.xml
@@ -8,7 +8,7 @@
     tools:context=".CreditsScreen">
 
     <ImageButton
-        android:id="@+id/creditsUnmuteButton2"
+        android:id="@+id/creditsUnmuteButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/backgroundColor"
@@ -19,7 +19,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.967"
-        app:srcCompat="@android:drawable/ic_lock_silent_mode" />
+        app:srcCompat="@android:drawable/ic_lock_silent_mode"
+        tools:ignore="ImageContrastCheck" />
 
     <ImageButton
         android:id="@+id/creditsMusicButton"
@@ -33,7 +34,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.971"
-        app:srcCompat="@android:drawable/ic_lock_silent_mode_off" />
+        app:srcCompat="@android:drawable/ic_lock_silent_mode_off"
+        tools:ignore="ImageContrastCheck" />
 
     <TextView
         android:id="@+id/creditsName4"
