--- a/app/src/main/res/layout/activity_game20_screen.xml
+++ b/app/src/main/res/layout/activity_game20_screen.xml
@@ -313,7 +313,7 @@
         tools:ignore="TextContrastCheck" />
 
     <Button
-        android:id="@+id/newGameButton"
+        android:id="@+id/newGameButton20"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/new_game"
