--- a/app/src/main/res/layout/activity_game8_screen.xml
+++ b/app/src/main/res/layout/activity_game8_screen.xml
@@ -7,6 +7,20 @@
     android:background="#8C9EFF"
     tools:context=".GameScreen">
 
+    <Button
+        android:id="@+id/newGameButton2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/new_game"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.989"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.472"
+        tools:ignore="TextContrastCheck" />
+
     <ImageButton
         android:id="@+id/gameunmutebutton"
         android:layout_width="51dp"
@@ -48,20 +62,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.081"
-        tools:ignore="TextContrastCheck" />
-
-    <Button
-        android:id="@+id/newGameButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/new_game"
-        android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.989"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.472"
         tools:ignore="TextContrastCheck" />
 
     <ImageButton
